Fix squished crowded auto complete items (#785)
* (fix) auto-complete items height issue

Fix when auto-complete popup has a lot of items, each items look squished and compressed.

* Remove extraneous flex-shrink

--- a/src/scss/_codemirror.scss
+++ b/src/scss/_codemirror.scss
@@ -90,6 +90,7 @@
 }
 .CodeMirror-hint-fill-all-fields {
   display: flex;
+  flex-shrink: 0;
   justify-content: space-between;
   order: -1;
   border-bottom: 1px solid var(--theme-border-color);
@@ -121,6 +122,7 @@
 }
 
 .CodeMirror-hint {
+  flex-shrink: 0;
   line-height: 1.4;
   padding: 5px 10px;
   width: 100%;
